--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     
     <!-- CSS Styles -->
-    <link rel="stylesheet" href="/static/css/landing.css">
+    <link rel="stylesheet" href="css/landing.css">
     
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Agrotech Digital - Tecnología Satelital para Agricultura">
@@ -538,6 +538,6 @@
     </script>
 
     <!-- Main JavaScript -->
-    <script src="/static/js/landing.js"></script>
+    <script src="js/landing.js"></script>
 </body>
 </html>
