mejoras en el index

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="hero-bg"></div>
         <div class="container">
             <div class="hero-content fade-in-up">
-                <span class="hero-badge">🛰️ Tecnología EOSDA</span>
+                <span class="hero-badge">Tecnología EOSDA</span>
                 <h1>Agricultura de Precisión con Visión Satelital</h1>
                 <p class="hero-description">
                     Monitore sus cultivos en tiempo real con análisis satelital avanzado. 
@@ -74,7 +74,7 @@
                         Ver Dashboard
                     </a>
                     <a href="#api" class="neuro-button">
-                        Documentación API
+                        API Documentación
                     </a>
                 </div>
                 <div class="hero-stats">
@@ -107,7 +107,9 @@
             </div>
             <div class="features-grid">
                 <div class="feature-card reveal">
-                    <div class="feature-icon">🛰️</div>
+                    <div class="feature-icon">
+                        <img src="images/satelite-tierra.jpg" alt="Análisis Satelital">
+                    </div>
                     <h3 class="feature-title">Análisis Satelital NDVI</h3>
                     <p class="feature-description">
                         Imágenes satelitales de alta resolución con índices vegetativos (NDVI, NDMI, EVI) 
@@ -115,7 +117,9 @@
                     </p>
                 </div>
                 <div class="feature-card reveal">
-                    <div class="feature-icon">📊</div>
+                    <div class="feature-icon">
+                        <img src="images/campo-tecnologia-1.jpg" alt="Dashboard Analítico">
+                    </div>
                     <h3 class="feature-title">Dashboard Analítico</h3>
                     <p class="feature-description">
                         Visualice estadísticas históricas, gráficos temporales y métricas clave 
@@ -123,7 +127,9 @@
                     </p>
                 </div>
                 <div class="feature-card reveal">
-                    <div class="feature-icon">🌧️</div>
+                    <div class="feature-icon">
+                        <img src="images/planta-tech.jpg" alt="Pronóstico Meteorológico">
+                    </div>
                     <h3 class="feature-title">Pronóstico Meteorológico</h3>
                     <p class="feature-description">
                         Datos climáticos precisos de 7 días para planificación de actividades agrícolas, 
@@ -131,7 +137,9 @@
                     </p>
                 </div>
                 <div class="feature-card reveal">
-                    <div class="feature-icon">💧</div>
+                    <div class="feature-icon">
+                        <img src="images/planta-monitoreo.jpg" alt="Estrés Hídrico">
+                    </div>
                     <h3 class="feature-title">Estrés Hídrico</h3>
                     <p class="feature-description">
                         Detecte zonas con déficit hídrico mediante índice NDMI para optimizar 
@@ -139,7 +147,9 @@
                     </p>
                 </div>
                 <div class="feature-card reveal">
-                    <div class="feature-icon">📱</div>
+                    <div class="feature-icon">
+                        <img src="images/cientifica-cultivo.jpg" alt="API REST Completa">
+                    </div>
                     <h3 class="feature-title">API REST Completa</h3>
                     <p class="feature-description">
                         Integre nuestros datos satelitales en sus propias aplicaciones con nuestra 
@@ -147,7 +157,9 @@
                     </p>
                 </div>
                 <div class="feature-card reveal">
-                    <div class="feature-icon">🗺️</div>
+                    <div class="feature-icon">
+                        <img src="images/campo-tecnologia-2.jpg" alt="Mapas Interactivos 3D">
+                    </div>
                     <h3 class="feature-title">Mapas Interactivos 3D</h3>
                     <p class="feature-description">
                         Visualización de parcelas en mapas 3D con CesiumJS, overlays de índices 
@@ -168,9 +180,11 @@
                     Plataformas diseñadas específicamente para las necesidades del sector agrícola moderno
                 </p>
             </div>
-            <div class="products-showcase">
+                        <div class="products-showcase">
                 <div class="product-card reveal">
-                    <div class="product-image">🌱</div>
+                    <div class="product-image">
+                        <img src="images/agricultor-app.jpg" alt="Agrotech Crop Monitoring">
+                    </div>
                     <div class="product-content">
                         <span class="product-badge">Principal</span>
                         <h3 class="product-title">Agrotech Crop Monitoring</h3>
@@ -186,29 +200,31 @@
                             <li>Reportes personalizados</li>
                         </ul>
                         <button class="neuro-button neuro-button-primary" onclick="redirectToLogin()">
-                            Acceder Ahora
+                            Explorar Plataforma
                         </button>
                     </div>
                 </div>
                 <div class="product-card reveal">
-                    <div class="product-image">📡</div>
+                    <div class="product-image">
+                        <img src="images/cientifica-cultivo.jpg" alt="Análisis de Datos">
+                    </div>
                     <div class="product-content">
-                        <span class="product-badge">Desarrolladores</span>
-                        <h3 class="product-title">Agrotech API Connect</h3>
+                        <span class="product-badge">Analítica</span>
+                        <h3 class="product-title">Data Analytics Suite</h3>
                         <p class="product-description">
-                            API RESTful completa para integrar datos satelitales y meteorológicos 
-                            en sus propias aplicaciones y sistemas.
+                            Herramientas avanzadas de análisis de datos agrícolas con inteligencia artificial 
+                            para toma de decisiones basada en datos históricos y predicciones.
                         </p>
                         <ul class="product-features">
-                            <li>API REST + WebSockets</li>
-                            <li>Documentación completa</li>
-                            <li>SDKs para Python, JS, Java</li>
-                            <li>99.9% Uptime SLA</li>
-                            <li>Soporte técnico dedicado</li>
+                            <li>BI y visualización de datos</li>
+                            <li>Machine Learning aplicado</li>
+                            <li>Predicción de rendimientos</li>
+                            <li>Optimización de recursos</li>
+                            <li>Dashboards personalizables</li>
                         </ul>
-                        <a href="#api" class="neuro-button neuro-button-accent">
-                            Ver Documentación
-                        </a>
+                        <button class="neuro-button neuro-button-accent" onclick="redirectToLogin()">
+                            Ver Demos
+                        </button>
                     </div>
                 </div>
             </div>
@@ -216,28 +232,37 @@
     </section>
 
     <!-- Stats Section -->
+        <!-- Stats Section -->
     <section class="stats section">
         <div class="container">
             <div class="stats-grid">
                 <div class="stat-card reveal">
-                    <div class="stat-icon">🌍</div>
+                    <div class="stat-icon">
+                        <img src="images/campo-tecnologia-2.jpg" alt="Hectáreas">
+                    </div>
                     <span class="stat-value">131.65</span>
                     <span class="stat-label">Hectáreas bajo Monitoreo</span>
                 </div>
                 <div class="stat-card reveal">
-                    <div class="stat-icon">📊</div>
+                    <div class="stat-icon">
+                        <img src="images/satelite-tierra.jpg" alt="Imágenes Satelitales">
+                    </div>
                     <span class="stat-value">1,000+</span>
-                    <span class="stat-label">Análisis Completados</span>
+                    <span class="stat-label">Imágenes Satelitales Procesadas</span>
                 </div>
                 <div class="stat-card reveal">
-                    <div class="stat-icon">🛰️</div>
-                    <span class="stat-value">50+</span>
-                    <span class="stat-label">Parcelas Activas</span>
+                    <div class="stat-icon">
+                        <img src="images/agrotech-satelite-1.jpg" alt="Análisis NDVI">
+                    </div>
+                    <span class="stat-value">99.9%</span>
+                    <span class="stat-label">Precisión en Análisis NDVI</span>
                 </div>
                 <div class="stat-card reveal">
-                    <div class="stat-icon">⚡</div>
-                    <span class="stat-value">5 min</span>
-                    <span class="stat-label">Tiempo de Respuesta API</span>
+                    <div class="stat-icon">
+                        <img src="images/planta-tech.jpg" alt="Uptime">
+                    </div>
+                    <span class="stat-value">24/7</span>
+                    <span class="stat-label">Soporte Técnico Disponible</span>
                 </div>
             </div>
         </div>
@@ -265,7 +290,7 @@
                 </div>
 
                 <div style="margin-bottom: var(--spacing-md);">
-                    <h4 style="color: var(--brand-green); margin-bottom: var(--spacing-xs);">🛰️ Análisis NDVI Histórico</h4>
+                    <h4 style="color: var(--brand-green); margin-bottom: var(--spacing-xs);">Análisis NDVI Histórico</h4>
                     <code style="display: block; background: var(--dark-bg); padding: var(--spacing-sm); border-radius: var(--radius-sm); color: var(--brand-green-light); margin-bottom: var(--spacing-xs);">
                         POST /api/parcels/ndvi-historical/
                     </code>
@@ -273,7 +298,7 @@
                 </div>
 
                 <div style="margin-bottom: var(--spacing-md);">
-                    <h4 style="color: var(--brand-green); margin-bottom: var(--spacing-xs);">🌧️ Pronóstico Meteorológico</h4>
+                    <h4 style="color: var(--brand-green); margin-bottom: var(--spacing-xs);">Pronóstico Meteorológico</h4>
                     <code style="display: block; background: var(--dark-bg); padding: var(--spacing-sm); border-radius: var(--radius-sm); color: var(--brand-green-light); margin-bottom: var(--spacing-xs);">
                         GET /api/parcels/weather-forecast/{parcel_id}/
                     </code>
@@ -281,7 +306,7 @@
                 </div>
 
                 <div style="margin-bottom: var(--spacing-md);">
-                    <h4 style="color: var(--brand-green); margin-bottom: var(--spacing-xs);">📊 Escenas Satelitales por Rango de Fechas</h4>
+                    <h4 style="color: var(--brand-green); margin-bottom: var(--spacing-xs);">Escenas Satelitales por Rango de Fechas</h4>
                     <code style="display: block; background: var(--dark-bg); padding: var(--spacing-sm); border-radius: var(--radius-sm); color: var(--brand-green-light); margin-bottom: var(--spacing-xs);">
                         GET /api/parcels/parcel/{id}/scenes/?start_date=2024-01-01&end_date=2024-12-31
                     </code>
@@ -289,7 +314,7 @@
                 </div>
 
                 <div style="margin-bottom: var(--spacing-lg);">
-                    <h4 style="color: var(--brand-green); margin-bottom: var(--spacing-xs);">💧 Estrés Hídrico Histórico</h4>
+                    <h4 style="color: var(--brand-green); margin-bottom: var(--spacing-xs);">Estrés Hídrico Histórico</h4>
                     <code style="display: block; background: var(--dark-bg); padding: var(--spacing-sm); border-radius: var(--radius-sm); color: var(--brand-green-light); margin-bottom: var(--spacing-xs);">
                         POST /api/parcels/water-stress-historical/
                     </code>
@@ -297,7 +322,7 @@
                 </div>
 
                 <button class="neuro-button neuro-button-primary" onclick="testAPI()" id="testApiBtn">
-                    🧪 Probar API en Vivo
+                    Probar API en Vivo
                 </button>
                 <div id="apiResult" style="margin-top: var(--spacing-md);"></div>
             </div>
@@ -365,7 +390,7 @@
                 <div class="footer-section">
                     <h3>Contacto</h3>
                     <ul class="footer-links">
-                        <li><a href="mailto:info@agrotechcolombia.com">✉️ info@agrotechcolombia.com</a></li>
+                        <li><a href="mailto:info@agrotechcolombia.com">info@agrotechcolombia.com</a></li>
                         <li><a href="tel:+573001234567">📞 +57 300 123 4567</a></li>
                         <li><a href="#">📍 Bogotá, Colombia</a></li>
                         <li><a href="#">🕒 Lun - Vie: 8:00 AM - 6:00 PM</a></li>
