mejoras en el index

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class="features-grid">
                 <div class="feature-card reveal">
                     <div class="feature-icon">
-                        <img src="images/satelite-tierra.jpg" alt="Análisis Satelital">
+                        <img src="images/agrotech satelite 1.png" alt="Análisis Satelital">
                     </div>
                     <h3 class="feature-title">Análisis Satelital NDVI</h3>
                     <p class="feature-description">
@@ -118,7 +118,7 @@
                 </div>
                 <div class="feature-card reveal">
                     <div class="feature-icon">
-                        <img src="images/campo-tecnologia-1.jpg" alt="Dashboard Analítico">
+                        <img src="images/iot-de-agricultura-inteligente-con-fondo-de-arbol-de-plantacion-manual.jpg" alt="Dashboard Analítico">
                     </div>
                     <h3 class="feature-title">Dashboard Analítico</h3>
                     <p class="feature-description">
@@ -128,7 +128,7 @@
                 </div>
                 <div class="feature-card reveal">
                     <div class="feature-icon">
-                        <img src="images/planta-tech.jpg" alt="Pronóstico Meteorológico">
+                        <img src="images/iot-agricola-con-fondo-de-campo-de-arroz.jpg" alt="Pronóstico Meteorológico">
                     </div>
                     <h3 class="feature-title">Pronóstico Meteorológico</h3>
                     <p class="feature-description">
@@ -138,7 +138,7 @@
                 </div>
                 <div class="feature-card reveal">
                     <div class="feature-icon">
-                        <img src="images/planta-monitoreo.jpg" alt="Estrés Hídrico">
+                        <img src="images/agricultura-inteligente-con-agricultura-iot.jpg" alt="Estrés Hídrico">
                     </div>
                     <h3 class="feature-title">Estrés Hídrico</h3>
                     <p class="feature-description">
@@ -148,7 +148,7 @@
                 </div>
                 <div class="feature-card reveal">
                     <div class="feature-icon">
-                        <img src="images/cientifica-cultivo.jpg" alt="API REST Completa">
+                        <img src="images/mujer-sosteniendo-una-tableta-junto-un-campo-agricola-con-espacio-de-copia.jpg" alt="API REST Completa">
                     </div>
                     <h3 class="feature-title">API REST Completa</h3>
                     <p class="feature-description">
@@ -158,7 +158,7 @@
                 </div>
                 <div class="feature-card reveal">
                     <div class="feature-icon">
-                        <img src="images/campo-tecnologia-2.jpg" alt="Mapas Interactivos 3D">
+                        <img src="images/farmer-rice-field-with-laptop.jpg" alt="Mapas Interactivos 3D">
                     </div>
                     <h3 class="feature-title">Mapas Interactivos 3D</h3>
                     <p class="feature-description">
@@ -183,7 +183,7 @@
                         <div class="products-showcase">
                 <div class="product-card reveal">
                     <div class="product-image">
-                        <img src="images/agricultor-app.jpg" alt="Agrotech Crop Monitoring">
+                        <img src="images/ingeniero-agronomo-control-de-cultivos-en-el-campo-con-tablet-pc.jpg" alt="Agrotech Crop Monitoring">
                     </div>
                     <div class="product-content">
                         <span class="product-badge">Principal</span>
@@ -206,7 +206,7 @@
                 </div>
                 <div class="product-card reveal">
                     <div class="product-image">
-                        <img src="images/cientifica-cultivo.jpg" alt="Análisis de Datos">
+                        <img src="images/mujer-sosteniendo-una-tableta-junto-un-campo-agricola-con-espacio-de-copia.jpg" alt="Análisis de Datos">
                     </div>
                     <div class="product-content">
                         <span class="product-badge">Analítica</span>
@@ -238,28 +238,28 @@
             <div class="stats-grid">
                 <div class="stat-card reveal">
                     <div class="stat-icon">
-                        <img src="images/campo-tecnologia-2.jpg" alt="Hectáreas">
+                        <img src="images/farmer-rice-field-with-laptop.jpg" alt="Hectáreas">
                     </div>
                     <span class="stat-value">131.65</span>
                     <span class="stat-label">Hectáreas bajo Monitoreo</span>
                 </div>
                 <div class="stat-card reveal">
                     <div class="stat-icon">
-                        <img src="images/satelite-tierra.jpg" alt="Imágenes Satelitales">
+                        <img src="images/agrotech satelite 1.png" alt="Imágenes Satelitales">
                     </div>
                     <span class="stat-value">1,000+</span>
                     <span class="stat-label">Imágenes Satelitales Procesadas</span>
                 </div>
                 <div class="stat-card reveal">
                     <div class="stat-icon">
-                        <img src="images/agrotech-satelite-1.jpg" alt="Análisis NDVI">
+                        <img src="images/agricultura-inteligente-con-agricultura-iot.jpg" alt="Análisis NDVI">
                     </div>
                     <span class="stat-value">99.9%</span>
                     <span class="stat-label">Precisión en Análisis NDVI</span>
                 </div>
                 <div class="stat-card reveal">
                     <div class="stat-icon">
-                        <img src="images/planta-tech.jpg" alt="Uptime">
+                        <img src="images/iot-agricola-con-fondo-de-campo-de-arroz.jpg" alt="Uptime">
                     </div>
                     <span class="stat-value">24/7</span>
                     <span class="stat-label">Soporte Técnico Disponible</span>
