mejoras en el index

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agrotech Digital - Tecnología Satelital para Agricultura de Precisión</title>
-    <meta name="description" content="Plataforma líder en análisis satelital y monitoreo agrícola con tecnología EOSDA. Optimiza tus cultivos con datos precisos y decisiones inteligentes.">
-    <meta name="keywords" content="agricultura de precisión, análisis satelital, NDVI, monitoreo de cultivos, tecnología agrícola, EOSDA">
+    <meta name="description" content="Plataforma líder en análisis satelital y monitoreo agrícola. Optimiza tus cultivos con datos precisos y decisiones inteligentes.">
+    <meta name="keywords" content="agricultura de precisión, análisis satelital, NDVI, monitoreo de cultivos, tecnología agrícola, datos satelitales">
     <meta name="author" content="Agrotech Digital">
     
     <!-- Favicon -->
@@ -42,7 +42,6 @@
                     <li><a href="#inicio">Inicio</a></li>
                     <li><a href="#funcionalidades">Funcionalidades</a></li>
                     <li><a href="#productos">Productos</a></li>
-                    <li><a href="#api">API</a></li>
                     <li><a href="#contacto">Contacto</a></li>
                     <li><a href="#" class="neuro-button neuro-button-primary" onclick="redirectToLogin()">Iniciar Sesión</a></li>
                 </ul>
@@ -60,7 +59,7 @@
         <div class="hero-bg"></div>
         <div class="container">
             <div class="hero-content fade-in-up">
-                <span class="hero-badge">Tecnología EOSDA</span>
+                <span class="hero-badge">Tecnología Satelital Avanzada</span>
                 <h1>Agricultura de Precisión con Visión Satelital</h1>
                 <p class="hero-description">
                     Monitore sus cultivos en tiempo real con análisis satelital avanzado. 
@@ -73,9 +72,6 @@
                     <a href="https://agrotechcolombia.netlify.app/templates/authentication/login.html" class="neuro-button neuro-button-accent">
                         Ver Dashboard
                     </a>
-                    <a href="#api" class="neuro-button">
-                        API Documentación
-                    </a>
                 </div>
                 <div class="hero-stats">
                     <div class="hero-stat">
@@ -84,7 +80,7 @@
                     </div>
                     <div class="hero-stat">
                         <span class="hero-stat-value">99.9%</span>
-                        <span class="hero-stat-label">Uptime API</span>
+                        <span class="hero-stat-label">Precisión de Datos</span>
                     </div>
                     <div class="hero-stat">
                         <span class="hero-stat-value">24/7</span>
@@ -148,12 +144,12 @@
                 </div>
                 <div class="feature-card reveal">
                     <div class="feature-icon">
-                        <img src="images/mujer-sosteniendo-una-tableta-junto-un-campo-agricola-con-espacio-de-copia.jpg" alt="API REST Completa">
+                        <img src="images/mujer-sosteniendo-una-tableta-junto-un-campo-agricola-con-espacio-de-copia.jpg" alt="Gestión de Cultivos">
                     </div>
-                    <h3 class="feature-title">API REST Completa</h3>
+                    <h3 class="feature-title">Gestión de Cultivos</h3>
                     <p class="feature-description">
-                        Integre nuestros datos satelitales en sus propias aplicaciones con nuestra 
-                        API robusta, documentada y fácil de usar.
+                        Administre fácilmente todos sus cultivos, parcelas y temporadas desde una interfaz 
+                        intuitiva y centralizada.
                     </p>
                 </div>
                 <div class="feature-card reveal">
@@ -268,8 +264,8 @@
         </div>
     </section>
 
-    <!-- API Demo Section -->
-    <section class="section" id="api" style="background: var(--dark-bg-secondary);">
+    <!-- API Demo Section - Temporalmente oculto -->
+    <section class="section" id="api" style="display: none; background: var(--dark-bg-secondary);">
         <div class="container">
             <div class="section-header">
                 <span class="section-badge">API</span>
@@ -360,11 +356,21 @@
                         y datos precisos. Impulsamos la agricultura de precisión en Colombia y Latinoamérica.
                     </p>
                     <div class="footer-social">
-                        <a href="#" aria-label="Facebook">📘</a>
-                        <a href="#" aria-label="Twitter">🐦</a>
-                        <a href="#" aria-label="LinkedIn">💼</a>
-                        <a href="#" aria-label="Instagram">📷</a>
-                        <a href="#" aria-label="YouTube">🎥</a>
+                        <a href="https://twitter.com/agrotechcolombia" target="_blank" rel="noopener noreferrer" aria-label="Twitter/X">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
+                        </a>
+                        <a href="https://facebook.com/agrotechcolombia" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/></svg>
+                        </a>
+                        <a href="https://instagram.com/agrotechcolombia" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.272.273 2.69.073 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98C15.668.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zM12 16a4 4 0 110-8 4 4 0 010 8zm6.406-11.845a1.44 1.44 0 100 2.881 1.44 1.44 0 000-2.881z"/></svg>
+                        </a>
+                        <a href="https://tiktok.com/@agrotechcolombia" target="_blank" rel="noopener noreferrer" aria-label="TikTok">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M19.59 6.69a4.83 4.83 0 01-3.77-4.25V2h-3.45v13.67a2.89 2.89 0 01-5.2 1.74 2.89 2.89 0 012.31-4.64 2.93 2.93 0 01.88.13V9.4a6.84 6.84 0 00-1-.05A6.33 6.33 0 005 20.1a6.34 6.34 0 0010.86-4.43v-7a8.16 8.16 0 004.77 1.52v-3.4a4.85 4.85 0 01-1-.1z"/></svg>
+                        </a>
+                        <a href="https://youtube.com/@agrotechcolombia" target="_blank" rel="noopener noreferrer" aria-label="YouTube">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M23.498 6.186a3.016 3.016 0 00-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 00.502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 002.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 002.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/></svg>
+                        </a>
                     </div>
                 </div>
                 <div class="footer-section">
@@ -373,18 +379,18 @@
                         <li><a href="#inicio">→ Inicio</a></li>
                         <li><a href="#funcionalidades">→ Funcionalidades</a></li>
                         <li><a href="#productos">→ Productos</a></li>
-                        <li><a href="#api">→ Documentación API</a></li>
+                        <li><a href="#contacto">→ Contacto</a></li>
                         <li><a href="#" onclick="redirectToLogin()">→ Iniciar Sesión</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
                     <h3>Productos</h3>
                     <ul class="footer-links">
-                        <li><a href="#">→ Crop Monitoring</a></li>
-                        <li><a href="#">→ API Connect</a></li>
+                        <li><a href="#">→ Monitoreo de Cultivos</a></li>
                         <li><a href="#">→ Análisis NDVI</a></li>
                         <li><a href="#">→ Pronósticos Meteorológicos</a></li>
                         <li><a href="#">→ Estrés Hídrico</a></li>
+                        <li><a href="#">→ Gestión de Parcelas</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
