mejoras en el index

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="container">
             <nav class="nav">
                 <a href="#" class="nav-logo">
-                    <img src="/static/images/logo.png" alt="Agrotech Digital" onerror="this.style.display='none';">
+                    <img src="images/Agro Tech logo solo.png" alt="Agrotech Digital" class="nav-logo-image">
                     <span>agrotech.</span>
                 </a>
                 <ul class="nav-links" id="navLinks">
@@ -396,9 +396,9 @@
                 <div class="footer-section">
                     <h3>Contacto</h3>
                     <ul class="footer-links">
-                        <li><a href="mailto:info@agrotechcolombia.com">info@agrotechcolombia.com</a></li>
-                        <li><a href="tel:+573001234567">📞 +57 300 123 4567</a></li>
-                        <li><a href="#">📍 Bogotá, Colombia</a></li>
+                        <li><a href="mailto:info@agrotechcolombia.com">✉️ info@agrotechcolombia.com</a></li>
+                        <li><a href="tel:+573223088873">📞 +57 322 308 8873</a></li>
+                        <li><a href="#">📍 Yopal, Casanare</a></li>
                         <li><a href="#">🕒 Lun - Vie: 8:00 AM - 6:00 PM</a></li>
                         <li><a href="#">🌐 www.agrotechcolombia.com</a></li>
                     </ul>
