--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="container">
             <nav class="nav">
                 <a href="#" class="nav-logo">
-                    <img src="images/Agro Tech logo solo.png" alt="Agrotech Digital" class="nav-logo-image">
+                    <img src="images/agrotech solo blanco.png" alt="Agrotech Digital" class="nav-logo-image">
                     <span>agrotech.</span>
                 </a>
                 <ul class="nav-links" id="navLinks">
